API Tweaks (#14)
So, testing this is a LOT easier with a UI, and shows where things need
some love.  Pools should allow volume based root disks, but not by
default as empheral is quick enough.  They should require a bunch more
fields.  Finally add in the images and flavors APis.
